# progProva

./: Cargo.toml
src/: capture.rs  main.rs  receiver.rs  streaming.rs  ui.rs
venvScriptsactivate/: pyvenv.cfg
venvScriptsactivate/Scripts/: activate  activate.bat
